<resources>
    <string name="app_name">iTW_Weather</string>
    <string name="title_hour_weather">當日天氣</string>
    <string name="title_week_weather">一周天氣</string>
    <string name="title_sun_moon">日出/月落</string>
    <string name="title_aqi">AQI</string>
    <string name="main_toolbar">新北市,板橋區</string>
    <string name="aqi_expandable_listview">新北市,板橋</string>
    <string name="aqi_title">請選取最近的觀測站</string>
    <string name="aqi_alert">AQI頁面,請選取下方選項</string>
    <string name="aqi_dialog_title">AQI 數值參考</string>
    <string name="expandable_listview_title">選擇地區</string>
    <string name="max_temp">99°C</string>
    <string name="min_temp">-99°C</string>
    <string name="wea_speed">3 公尺/秒</string>
    <string name="txt_humi">濕度</string>
    <string name="txt_wspeed">風速</string>
    <string name="wea_humi">65%</string>
    <string name="txt_pop">降雨</string>
    <string name="wea_pop">70%</string>
    <string name="wea_wdirection">西北風</string>
    <string name="txt_wdirection">風向</string>
    <string name="pm25">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="SO2">SO2</string>
    <string name="NO2">NO2</string>
    <string name="CO">CO</string>
    <string name="O3">O3</string>
    <string name="time_counter">60</string>
    <string name="day_weather_preview">當日天氣預覽</string>
    <string name="week_weather_preview">一周氣象預覽</string>
    <string name="weather_info">當前氣象資訊</string>
    <string name="weather_describe">當日氣象描述</string>
    <string name="sun_rise">日出</string>
    <string name="sun_set">日落</string>
    <string name="moon_rise">月出</string>
    <string name="moon_set">月落</string>
    <string name="time">03:00</string>
    <string name="weather_wx">Cloud</string>
</resources>