<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="hourWeather"
            type="com.example.weather_itw.model.hour.HourWeather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#17171C"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        tools:context=".ui.hourWeather.HourWeatherFragment">

        <ImageView
            android:id="@+id/wea_img"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cloud" />

        <TextView
            android:id="@+id/wea_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_Wx()}"
            app:layout_constraintEnd_toEndOf="@+id/wea_temp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/wea_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wea_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_T()}"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/wea_img"
            app:layout_constraintTop_toBottomOf="@+id/wea_status" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wea_img"
            app:layout_constraintVertical_bias="0.0">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/pbLoading"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/week_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/frame_green_2dp"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/day_weather_preview"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recy_wea_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:overScrollMode="never"
                        android:paddingTop="15dp"
                        android:scrollbars="none"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/week_weather" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/frame_green_2dp"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/weather_info"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recy_wea_week" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/background"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/con1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/wea_wspeed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="30dp"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_WS()}"
                                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <ImageView
                                android:id="@+id/icon_img4"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:src="@drawable/wind"
                                app:layout_constraintStart_toStartOf="@+id/guideline2"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <TextView
                                android:id="@+id/itemname_tv4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/txt_wspeed"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                                app:layout_constraintStart_toEndOf="@+id/icon_img4"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <TextView
                                android:id="@+id/wea_humi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="40dp"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_RH()}"
                                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <TextView
                                android:id="@+id/itemname_tv3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/txt_humi"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                                app:layout_constraintStart_toEndOf="@+id/icon_img3"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <ImageView
                                android:id="@+id/icon_img3"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_marginBottom="10dp"
                                android:src="@drawable/humidity"
                                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                                app:layout_constraintStart_toStartOf="@+id/guideline4"
                                app:layout_constraintTop_toTopOf="@+id/guideline6" />

                            <TextView
                                android:id="@+id/wea_wdirection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="30dp"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_WD()}"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />

                            <TextView
                                android:id="@+id/itemname_tv2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/txt_wdirection"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@+id/icon_img2"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />

                            <ImageView
                                android:id="@+id/icon_img2"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:src="@drawable/wind_rose"
                                app:layout_constraintStart_toStartOf="@+id/guideline2"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />

                            <ImageView
                                android:id="@+id/icon_img"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:src="@drawable/rain1"
                                app:layout_constraintStart_toStartOf="@+id/guideline4"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />

                            <TextView
                                android:id="@+id/itemname_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/txt_pop"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@+id/icon_img"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />

                            <TextView
                                android:id="@+id/wea_pop"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="40dp"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@{hourWeather.records.locations.get(0).location.get(0).get_Hour_PoP6h()}"
                                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                                app:layout_constraintTop_toTopOf="@+id/guideline3" />


                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.50" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_percent="0.14705883" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_begin="20dp" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_begin="39dp" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_begin="68dp" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/frame_green_2dp"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/weather_describe"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                    <com.example.weather_itw.customview.MarqueeView
                        android:id="@+id/marqueeView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:mvAnimDuration="500"
                        app:mvInterval="3000"
                        app:mvTextSize="18sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>